--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,6 +78,8 @@ libltntstools_la_SOURCES += libltntstools/demux.h
 libltntstools_la_SOURCES += demux-types.h
 libltntstools_la_SOURCES += demux.c
 libltntstools_la_SOURCES += demux-pid.c
+libltntstools_la_SOURCES += smpte2022_7.c
+libltntstools_la_SOURCES += log.c
 
 libltntstools_la_CFLAGS = -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" \
 	-D_FILE_OFFSET_BITS=64 -O3 -D_DEFAULT_SOURCE -I$(top_srcdir)/include
@@ -131,3 +133,5 @@ libltntstools_include_HEADERS += libltntstools/rtp-analyzer.h
 libltntstools_include_HEADERS += libltntstools/ac3.h
 libltntstools_include_HEADERS += libltntstools/vbv.h
 libltntstools_include_HEADERS += libltntstools/demux.h
+libltntstools_include_HEADERS += libltntstools/smpte2022_7.h
+libltntstools_include_HEADERS += libltntstools/log.h
